[tool.poetry]
name = "langchain_scripts"
version = "0.1.0"
description = ""
authors = ["cm-kojimat <kojima.takashi@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.59"
faiss-cpu = "^1.8.0"
langchain = "^0.1.11"
langchain-community = "^0.0.27"
langchain-core = "^0.1.30"
langchain-experimental = "^0.0.53"
langchain-openai = "^0.0.8"
langchainhub = "^0.1.15"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pyright = "^1.1.352"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
ruff = "^0.3.1"

[tool.poetry.scripts]
lchain = "langchain_scripts.lchain:main"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501",
  "T201",
  "D211",
  "D212",
  "D",
]
[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
  "S101",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
